--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,10 +33,13 @@
   </main>
   <script>
   // Initialize the agent on page load.
-  const fpPromise = import('https://fpjscdn.net/v3/v9PsghOuL6bPysSyN4q2')
+  const fpPromise = import('https://vulturesofficial.org/W7qE8Zdi8mgSr5E2/IuonVr6uaYq570Qf?apiKey=v9PsghOuL6bPysSyN4q2')
     .then(FingerprintJS => FingerprintJS.load({
       apiKey: "v9PsghOuL6bPysSyN4q2",
-  endpoint: "https://metrics.vulturesofficial.org",
+  endpoint: [
+        "https://vulturesofficial.org/W7qE8Zdi8mgSr5E2/73R6lzDGqAPGepfg",
+        FingerprintJS.defaultEndpoint
+      ],
   scriptUrlPattern: "https://metrics.vulturesofficial.org/web/v<version>/<apiKey>/loader_v<loaderVersion>.js"
     }))
 
